samples/_failures_safe/1761075456_e217e0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_77337e59.c: In function ‘tokenize’:
./samples/SAFE/__tmp_77337e59.c:168:13: error: expected declaration or statement at end of input
  168 |             column = token.column;
      |             ^~~~~~
./samples/SAFE/__tmp_77337e59.c:168:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_77337e59.c:168:13: error: expected declaration or statement at end of input
